fix(vitepress-twoslash): fix scroll blocking on mobile viewports (#1235)

--- a/packages/vitepress-twoslash/src/style.css
+++ b/packages/vitepress-twoslash/src/style.css
@@ -16,6 +16,10 @@
   z-index: calc(var(--vp-z-index-local-nav) - 1);
 }
 
+.v-popper--theme-twoslash.v-popper__popper {
+  content-visibility: auto;
+}
+
 .v-popper--theme-twoslash .v-popper__inner {
   background: var(--twoslash-popup-bg);
   color: var(--twoslash-popup-color);
